# Agentic-Ai-Java-Code-Analyzer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: health_check.py
src/analyzer/: __init__.py  __version__.py
src/analyzer/cli/: main.py
src/analyzer/core/: agent.py
src/analyzer/llm/: base.py  groq_client.py
src/analyzer/tools/: base.py  registry.py
src/analyzer/tools/code/: complexity.py  reader.py  static_analyzer.py
src/analyzer/utils/: exceptions.py  health.py  logger.py
src/config/: settings.py
tests/: conftest.py
tests/fixtures/sample_code/: BadCode.java
tests/unit/: test_health.py
